--- a/ngAO_studyreport/es/es.tex
+++ b/ngAO_studyreport/es/es.tex
@@ -114,7 +114,7 @@ Our major findings with simulations for MOAO are as follows:
  \item In order to achieve good wavefront error corrections, TTGS should
        be reasonably close to the target. Consequently, the sky
        coverage to be achieved with MOAO might be fairly similar to the
-       FoV of the current AO188 ($2'-3'$).
+       FoV of the current AO188.
 \end{itemize}
 
 %\medskip
@@ -247,9 +247,9 @@ evolutionary paths of stellar mass assembly, size, and morphology. We
 should also emphasize that we can install new narrow-band filters which
 are designed to capture important emission lines at specific redshifts
 to trace star formation activities in the multiple galaxies within the
-target field. Such addition of new filters and dispersion elements are
-one significant advantage of ground-based facilities over the
-space-bourne telescopes.
+target field. Such addition of new filters (and also new dispersion 
+elements for spectroscopy) are one significant advantage of ground-based
+facilities over the space-bourne telescopes. 
 
 With {\it spectroscopic observations}, abundant physical information
 such as star formation rate, amount of dust, metallicity, gas
@@ -378,4 +378,3 @@ the wide-field instrument with GLAO prior to the science observations of
 TMTs, to execute survey observations, and to construct list of target
 objects for detailed studies with TMT. We should construct a development
 plan to start science observation by 2020.
-
