--- a/ngAO_studyreport/science/sci_intro.tex
+++ b/ngAO_studyreport/science/sci_intro.tex
@@ -1,4 +1,4 @@
-\chapter{Science with Subaru ngAO
+\chapter{Science with ULTIMATE-SUBARU 
 \label{chap:science}}
 
 In this chapter we introduce science cases proposed to be carried out
@@ -34,16 +34,19 @@ Distant Galaxies and Understanding of the Process of the Cosmic
 Reionization'.
 
 Because GLAO can provide images with better spatial resolution and
-improved sensitivity, we can treat GLAO system as `significant upgrade
+improved sensitivity, the GLAO system can be a `significant upgrade
 of Subaru Telescope' rather than an introduction of a new
 instrument. Various reseaches should be benefitted with the system.
 In Septermber 2011 we had a science workshop in the Japanese community
 titled `Science Workshop for Subaru Telescope Next-Gen AO System' in
 Osaka,
 Japan\footnote{\href{http://www.naoj.org/Projects/newdev/ws11b/index.html}{http://www.naoj.org/Projects/newdev/ws11b/}}. 
-We received important suggestions and proposals for wide-range of
-researches, such as galaxy evolution, growth of massive black holes,
-galaxy archaeology, the Galactic center, star-forming regions, and
-exoplanets. From this science workshop we started more extensive
-discussions on various science cases, and this chapter represents the
-current outcomes of such discussions and studies.
+We also had 'Subaru GLAO Science Workshop' in June 2013 in Hokkaido
+Univ. Some Canadian researchers as well as those from Taiwan has
+participated the workshop and presented their prospects. 
+Through these workshops, we received important suggestions and proposals
+for wide-range of researches, such as galaxy evolution, growth of
+massive black holes, galaxy archaeology, the Galactic center,
+star-forming regions, and exoplanets. From this science workshop we
+started more extensive discussions on various science cases, and this
+chapter represents the current outcomes of such discussions and studies.
