--- a/ngAO_studyreport/subaru_ngao_SR_en.tex
+++ b/ngAO_studyreport/subaru_ngao_SR_en.tex
@@ -72,6 +72,7 @@ Optics\\Study Report\\(Draft)}
 
 %%% Science
 \include{science/sci_intro}
+\include{science/veryhighz/nbf}
 
 %%% AO Simulation
 \include{simulation/glao/oya}
