--- a/ngAO_studyreport/science/veryhighz/nbf.tex
+++ b/ngAO_studyreport/science/veryhighz/nbf.tex
@@ -2,10 +2,12 @@
 \label{sec:nbf}}
 
 \noindent
+\begin{center}
 %% Authors
 {\bf Ikuru Iwata$^{1}$}\\
 $^1$ Subaru Telescope, National Astronomical Observatory of Japan, 650
 North Aohoku Place, Hilo, HI 96720, USA
+\end{center}
 \vspace{0.5cm}
 
 \subsection{Introduction}
