--- a/ngAO_studyreport/science/veryhighz/nbf.tex
+++ b/ngAO_studyreport/science/veryhighz/nbf.tex
@@ -1,3 +1,6 @@
+\def\thisdir{science/veryhighz/}
+
+
 \section{Search for Galaxies at $z>7$ with Narrow-Band Imaging
 \label{sec:nbf}}
 
@@ -12,7 +15,21 @@ North Aohoku Place, Hilo, HI 96720, USA
 
 \subsection{Introduction}
 
-Background information. 
+Subaru has been one of leading facilities pushing the frontier of
+the distant universe. A unique capability of the prime focus camera
+(Suprime-Cam) have enabled us to conduct wide-field survey which is
+essentially important to find very rare objects such as luminous distant
+galaxies. One of the efficient methods to find distant star-forming
+galaxies is to detect Ly$\alpha$ emission using narrow-band filter
+imaging. 
+
+
+Currently a new prime focus camera in optical wavelength,
+Hyper Suprime-Cam (HSC), is under testing. HSC has more than seven times
+wider field-of-view, and it is expected to enable us conducting deep
+surveys much more efficiently than the current Suprime-Cam.
+However, the wavelength of the redshifted Ly$\alpha$
+T
 Past researches.
 Identify current issues.
 
@@ -45,3 +62,6 @@ Instruments for 8--10m class telescopes.
 ELT instruments.
 
 Space-based projects.
+
+\bibliographystyle{apj}
+\bibliography{\thisdir nbf}
