--- a/ngAO_studyreport/science/veryhighz/nbf.tex
+++ b/ngAO_studyreport/science/veryhighz/nbf.tex
@@ -20,9 +20,15 @@ the distant universe. A unique capability of the prime focus camera
 (Suprime-Cam) have enabled us to conduct wide-field survey which is
 essentially important to find very rare objects such as luminous distant
 galaxies. One of the efficient methods to find distant star-forming
-galaxies is to detect Ly$\alpha$ emission using narrow-band filter
-imaging. 
-
+galaxies is to detect Ly$\alpha$ emission using narrow-band filter (NBF) 
+imaging. A strongly star-forming object with redshift 
+$z = \lambda_{\mathrm NBF} / \lambda_{\mathrm Ly\alpha} -1$ could
+appears to be bright comparared to those with adjacent broad-band
+filters. Galaxies detected with this methods are called as 'Ly$\alpha$
+emitters (or LAEs)'. The current most distant galaxy with a spectroscopic 
+confirmation is an LAE at $7\approx 7.3$, which was discovered by
+\citet{Shibuya2012} using Suprime-Cam with a narrow-band filter NB1006
+(central $\lambda$ is 10052\AA).
 
 Currently a new prime focus camera in optical wavelength,
 Hyper Suprime-Cam (HSC), is under testing. HSC has more than seven times
