add apj.bst. modify makefile. update nbf.tex

--- a/ngAO_studyreport/science/veryhighz/nbf.tex
+++ b/ngAO_studyreport/science/veryhighz/nbf.tex
@@ -21,41 +21,53 @@ the distant universe. A unique capability of the prime focus camera
 essentially important to find very rare objects such as luminous distant
 galaxies. One of the efficient methods to find distant star-forming
 galaxies is to detect Ly$\alpha$ emission using narrow-band filter (NBF) 
-imaging. A strongly star-forming object with redshift 
-$z = \lambda_{\mathrm NBF} / \lambda_{\mathrm Ly\alpha} -1$ could
-appears to be bright comparared to those with adjacent broad-band
+imaging. A strongly star-forming object with a redshift 
+$z = \lambda_\mathrm{NBF} / \lambda_\mathrm{Ly\alpha} -1$ could
+appear to be bright compared to those with adjacent broad-band
 filters. Galaxies detected with this methods are called as 'Ly$\alpha$
 emitters (or LAEs)'. The current most distant galaxy with a spectroscopic 
-confirmation is an LAE at $7\approx 7.3$, which was discovered by
+confirmation is an LAE at $z=7.215$, which was discovered by
 \citet{Shibuya2012} using Suprime-Cam with a narrow-band filter NB1006
-(central $\lambda$ is 10052\AA).
+(central $\lambda$ is 10,052\AA).
 
-Currently a new prime focus camera in optical wavelength,
-Hyper Suprime-Cam (HSC), is under testing. HSC has more than seven times
-wider field-of-view, and it is expected to enable us conducting deep
-surveys much more efficiently than the current Suprime-Cam.
-However, the wavelength of the redshifted Ly$\alpha$
-T
-Past researches.
-Identify current issues.
+Currently a new prime focus camera for Subaru Telescope in optical
+wavelength, Hyper Suprime-Cam (HSC), is under testing. HSC has more than
+seven times wider field-of-view, and it is expected to enable us
+conducting deep surveys much more efficiently than the current
+Suprime-Cam. HSC will have a NBF called NB101 which has a central
+$\lambda$ is 10,095\AA, which will be used to detect many $z\sim 7.3$
+LAEs. 
+However, the wavelength of the redshifted Ly$\alpha$ is almost at the
+long wavelength limit of the CCDs, and finding galaxies at $z>7.5$ with
+cameras with CCDs is impossible. So deep near-IR surveys are mandatory
+to push the redshift frontier further.
+
+(Cosmic reionization)
+
 
 \subsection{Surveys with ULTIMATE-SUBARU}
 
-Methods.
+\par\noindent
+[Methods.]
 
-What should be clarified with ULTIMATE-SUBARU.
+\par\noindent
+[What should be clarified with ULTIMATE-SUBARU.]
 
 \subsection{Proposed Observations}
 
-Target objects: sample selection, number of objects, number of observing
-fields, sky area.
+\par\noindent
+[Target objects: sample selection, number of objects, number of observing
+fields, sky area.]
 
-Observing modes: imaging or spectroscopy.
+\par\noindent
+[Observing modes: imaging or spectroscopy.]
 
-Required observing time:
+\par\noindent
+[Required observing time:]
 
-Special requirements for ULTIMATE-SUBARU other than baseline
-specifications, if any.
+\par\noindent
+[Special requirements for ULTIMATE-SUBARU other than baseline
+specifications, if any.]
 
 \subsection{Synergy and Competitions}
 
