--- a/ngAO_studyreport/science/veryhighz/nbf.tex
+++ b/ngAO_studyreport/science/veryhighz/nbf.tex
@@ -47,8 +47,45 @@ to push the redshift frontier further.
 
 \subsection{Surveys with ULTIMATE-SUBARU}
 
-\par\noindent
-[Methods.]
+We will use special narrow-band filters which are designed to trace
+photons with wavelength ranges between the strong OH air glows from the
+Earth's atmosphere.
+Here we assume three wavelength ranges as a fiducial set to study the
+feasibility.
+
+\begin{table}[!ht]
+\begin{center}
+\begin{tabular}{rrr}
+\hline
+$\lambda_\mathrm{c}$ & FWHM & $z_{\mathrm Ly\alpha}$\\
+\hline
+1.0625 & 0.015  &  7.74\\
+1.340  & 0.019  & 10.0 \\
+1.550  & 0.022  & 11.75\\
+\hline
+\end{tabular}
+\end{center}
+\caption{
+Central wavelengths ($\lambda_\mathrm{c}$ in $\mu$m), FWHM (in $\mu$m),
+ and redshifts of Ly$\alpha$ emission at $\lambda_\mathrm{c}$ for NBFs
+ considered here.
+}
+\label{tab:iwata_nbf_setup}
+\end{table}
+
+\begin{figure}[!ht]
+\centerline{
+\includegraphics[width=80mm]{\thisdir figs/iwata_pg_filters_nbf01vd.eps}
+}
+\caption{
+Transmission curves of NBFs considered. Transmission curves for $Y$,
+ $J$, $H$-bands and the atomospheric transmission, and OH air glow
+ strength (in arbitrary unit) are also shown.
+}
+\label{fig:iwata_filter_nbf}
+\end{figure}
+
+
 
 \par\noindent
 [What should be clarified with ULTIMATE-SUBARU.]
