nbf.tex modification

--- a/ngAO_studyreport/science/veryhighz/nbf.tex
+++ b/ngAO_studyreport/science/veryhighz/nbf.tex
@@ -85,6 +85,8 @@ Transmission curves of NBFs considered. Transmission curves for $Y$,
 \label{fig:iwata_filter_nbf}
 \end{figure}
 
+\par\noindent
+[Very narrow band width filters]
 
 
 \par\noindent
