--- a/ngAO_studyreport/science/veryhighz/nbf.tex
+++ b/ngAO_studyreport/science/veryhighz/nbf.tex
@@ -7,7 +7,7 @@
 \noindent
 \begin{center}
 %% Authors
-{\bf Ikuru Iwata$^{1}$, Masayuki Akiyama}\\
+{\bf Ikuru Iwata$^{1}$, Masayuki Akiyama, Subaru ngAOwg}\\
 $^1$ Subaru Telescope, National Astronomical Observatory of Japan, 650
 North Aohoku Place, Hilo, HI 96720, USA
 \end{center}
