--- a/ngAO_studyreport/instrument/inst.tex
+++ b/ngAO_studyreport/instrument/inst.tex
@@ -6,39 +6,18 @@
 
 \section{Requirements on Instrument from Scientific Objectives}
 
-すばる望遠鏡次世代AOシステムを考える上で、これと組み合わせる新観測装置に
-ついて検討することは、特に科学的要求の観点から非常に重要である。
-
-Chapter \ref{chap:science}で見たように、すばる望遠鏡次世代AOとしては、
-広い視野にわたって改善された像質を達成するGround-Layer AO(GLAO)が有力で
-ある。GLAOでは、conventionalなAOでは実現できない広い視野での星像の改善が
-期待できる。可変副鏡を用いたGLAOでの像質改善は、既存の観測装置を用いた観
-測においても大きなメリットをもたらすと期待できるが、より効果的な観測を行
-うためには、GLAOの仕様(視野、典型的な像質など)に最適化した新たな観測装置
-を開発することでGLAOの特長を十分発揮できるようにすることが必要である。
-
-ここでは特に近赤外線撮像分光装置についての検討を記述する。
-Section~\ref{sec:sci_summary}にてまとめた科学的要求に
-応えるために近赤外線装置に必要な主な仕様は以下のようにまとめられる:
+Here we re-summarize the requirements from key science cases on
+instrument specifications.
 
 \begin{itemize}
- \item カセグレン装置としてできるだけ広視野化を図る
- \item 多天体分光機能
- \item (多天体)面分光機能
- \item 波長域: 0.9--2.5$\mu$m
- \item 分散: 500-3,000
- \item 狭帯域フィルタを含むフィルタ交換の高い自由度
- \item 空間分解能: GLAOとして$0.2''$ @ $K$-band、狭い視野での観測モード
-       では50--60 mas
+ \item Field of view
+ \item Pixel scale
+ \item Requirements on broad-band filters (numbers, wavelength coverages)
+ \item Requirements on narrow-band filters (numbers, spectral resolution,
+      wavelength uniformity, wavelength coverages)
+ \item Spectroscopy: Spectral resolution 
+ \item Requirements on multi-object spectrograph mode
 \end{itemize}
 
-これらの中でも特に、広視野化のfeasibilityが本計画の要であるといえる。
-Chapter \ref{chap:simulation}で見たように、シミュレーションによると、
-GLAOによる像質の改善は、視野の広さへの依存はあまり大きくなく、20分角
-$\phi$程度の視野でも均質な像質改善を達成できるという結果が得られている。
-よって、GLAO+新装置で達成可能な視野の広さは、観測装置側でどこまで視野を
-拡大できるかでほぼ決定されると考えてよい。
-以下では特に、すばる望遠鏡のカセグレン観測装置において、どこまでの広視野
-化を図ることが可能かを調査する。
-
-
+In this chapter we summarize the studies we have made so far on
+instruments for ULTIMATE-SUBARU.
