--- a/ngAO_studyreport/instrument/optics/optcraft.tex
+++ b/ngAO_studyreport/instrument/optics/optcraft.tex
@@ -1,7 +1,8 @@
 \def\thisdir{instrument/optics/}
 
 \begin{center}
-\section{Studies of the Optics for the Wide-Field Near-IR Instrument
+\section{Studies of the Optics for the Wide-Field Near-IR Imager and
+ Multi-object Spectrograph
 \label{sec:inst_optics}}
 \vspace{0.5cm}
 
@@ -17,13 +18,24 @@ $^3$ Subaru Telescope, National Astronomical Observatory of Japan
 
 \end{center}
 
-以下の検討結果は、オプトクラフト社による
-「すばる望遠鏡 次世代広視野補償光学用近赤外線装置 基礎検討」(文書番号
-CP0046--11--RP001)からの抜粋である。
-なお、報告書には各設計での光学パラメータテーブルも掲載されている。
-
-%%% 20130311 ommitted by Iwata
+Here we summarize results of studies made by Dr. Yamamuro (Optcraft).
+Document Number: CP0046--11--RP001 (w/o FoV split), CP0046--12--RP001 (w
+FoV split).
 
 \subsection{Optical Design without FoV Split}
 
+\subsubsection{Cases in which Subaru Telescope optical parameters are
+   not changed}
+
+\subsubsection{Cases in which Subaru Telescope optical parameters are
+   changed}
+
+
 \subsection{Optical Design with FoV Split}
+
+\subsubsection{Case A: secondary mirror parameter is the same as
+   existing one}
+
+\subsubsection{Case B: secondary mirror parameter is modified}
+
+
