--- a/ngAO_studyreport/subaru_ngao_SR_en.tex
+++ b/ngAO_studyreport/subaru_ngao_SR_en.tex
@@ -90,6 +90,7 @@ Optics\\Study Report\\(Draft)}
 \include{instrument/inst}
 \include{instrument/optics/optcraft}
 \include{instrument/mechanics/mechanics}
+\include{instrument/inst_other_issue}
 
 %%% Development Plan
 \include{plan/plan}
